tests/basic/bad/test04.pepa
% File: tests/bad/test04.pepa
% Wrong identifier in synchronisation set
P = (a, r).P;
(P <b> P)

